# src/main/java/org/siri_hate/chat_service/controller/ChatController.java
@@ -6,8 +6,6 @@ import org.siri_hate.main_service.dto.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
@@ -21,10 +19,8 @@ public class ChatController implements ChatApi {
     }
 
     @Override
-    public ResponseEntity<ChatFullResponseDTO> createChat(ChatRequestDTO chatRequestDTO) {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        String ownerUsername = authentication.getName();
-        var response = chatService.createChat(ownerUsername, chatRequestDTO);
+    public ResponseEntity<ChatFullResponseDTO> createChat(String xUserName, ChatRequestDTO chatRequestDTO) {
+        var response = chatService.createChat(xUserName, chatRequestDTO);
         return new ResponseEntity<>(response, HttpStatus.CREATED);
     }
 
